# YgoMasterArciveTool

./: CMakeLists.txt  README.md  win_build_script.bat
demo/: main.cpp
interface/: interface.h
src/: public.h  ygomasterArchiveMgr.cpp  ygomasterArchiveMgr.h
